<resources>
    <string name="app_name">UIDraft</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main">MainActivity</string>
    <string-array name="client_array">
        <item>Client1</item>
        <item>Client2</item>
        <item>Client3</item>
        <item>Client0</item>
    </string-array>
    <string name="clients">Clients</string>
    <string name="travel">Travel</string>
    <string name="expense">Expense</string>
    <string name="reports">Reports</string>
    <!-- Reports submenu -->
    <string name="client_report">Client Report</string>
    <string name="expense_report">Expense Report</string>
    <string name="upcoming_travels">Upcoming Travels</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_reports">ReportsActivity</string>

<!-- Client details -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>

    <string name="notes">Notes</string>
    <string name="new_note">New Note</string>
    <string name="client_name">Client Name</string>
    <string name="emails">Emails</string>
    <string name="sms">Messages</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>

</resources>
