<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.simbiosys.uidraft.ClientDetailFragment"
    android:weightSum="4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/ok"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:layout_below="@+id/editText2"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/buttonEdit"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:layout_below="@+id/editText3"
            android:layout_alignStart="@+id/editText2" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notesList"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText4" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1">


        <Button
            android:id="@+id/btn_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/upcoming_travels"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/btn_expense_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_report"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/btn_upcoming" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emails"
            android:id="@+id/btn_emails"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms"
            android:id="@+id/btn_sms"
            android:layout_below="@+id/btn_emails"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_note"
            android:id="@+id/btn_newnote"
            android:layout_gravity="right"
            android:layout_above="@+id/btn_sms"
            android:layout_toEndOf="@+id/btn_sms" />


    </RelativeLayout>


</LinearLayout>

